--- a/src/app/clients/clients-view/general-tab/general-tab.component.html
+++ b/src/app/clients/clients-view/general-tab/general-tab.component.html
@@ -136,7 +136,7 @@
     <ng-container matColumnDef="Actions">
       <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.TabGeneral.lblActions'| translate }}</th>
       <td mat-cell *matCellDef="let element">
-        <div *ngIf="!isTeller">
+        <div *ngIf="!isTeller && !this.isInterchangeClient">
           <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
             <i class="fa fa-arrow-up"></i>
