--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -358,6 +358,7 @@
               <td mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
+                    [readonly]="!isOwner"
                     matInput
                     type="number"
                     id="{{ i }}_costPercentage"
@@ -435,6 +436,7 @@
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
+                    [readonly]="!isOwner"
                     currencyMask
                     id="{{ i }}_maxLimitAmount"
                     [value]="element.maxLimitAmount"
@@ -453,6 +455,7 @@
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
+                    [readonly]="!isOwner"
                     type="number"
                     currencyMask
                     id="{{ i }}_levelLimit"
