--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -39,20 +39,18 @@
     <button mat-mini-fab [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger"
       matTooltip="Danh sách máy POS - hạn mức còn lại" tourAnchor="toolbar-2-5">
       <i class="fas fa-hands-helping"></i>
-      <!-- <a matLine>Máy POS và đối tác</a> -->
     </button>
 
     <button  mat-mini-fab [routerLink]="['/checker-inbox-and-tasks/checker-inbox']" matTooltip="Phê duyệt">
         <i class="fa fa-check"></i>
     </button>
-    <button *midasHasPermission="'ALL_FUNCTIONS'"
-      matTooltip="Quản lý Interchange"
-      mat-mini-fab
-      routerLink="/clients/ic-client/general"
-      [queryParams]="{ typeViewClient: 'view', clientType: 'ic' }"
-    >
+
+
+    <button mat-mini-fab [matMenuTriggerFor]="IcMenu" #POSPartnerMenuTrigger="matMenuTrigger"
+      matTooltip="Quản lý Interchange" tourAnchor="toolbar-2-5">
       <fa-icon icon="network-wired" size="lg"></fa-icon>
     </button>
+
     <!-- <div *midasHasPermission="'POS_UPDATE'">
       <button mat-mini-fab *midasHasActiveModule="'campaignModule'"
        [matMenuTriggerFor]="MarketingMenu"
@@ -63,13 +61,13 @@
 
       </button>
     </div> -->
-    <!-- <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
+    <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
 
       <button mat-mini-fab color="basic" *midasHasActiveModule="'billModule'" [routerLink]="['/bills']"
         matTooltip="Quản lý hóa đơn đầu vào">
         <i class="fas fa-receipt"></i>
       </button>
-
+      <!--
       <button mat-mini-fab color="basic" [routerLink]="['/banks']" matTooltip="Quản lý thông tin ngân hàng">
         <i class="fas fa-university"></i>
       </button>
@@ -77,8 +75,8 @@
       <button mat-mini-fab color="basic" [matMenuTriggerFor]="accountingMenu" #accountingMenuTrigger="matMenuTrigger"
         matTooltip="Quản trị hệ thống">
         <i class="fas fa-cogs"></i>
-      </button>
-    </div> -->
+      </button> -->
+    </div>
   </div>
 
   <div fxFlex fxLayout="row" fxLayoutAlign="end around" fxLayoutAlign.lt-md="end center" *ngIf="this.isDesktop"
@@ -177,6 +175,20 @@
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
   <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
+
+</mat-menu>
+
+<mat-menu #IcMenu="matMenu" [overlapTrigger]="false">
+
+  <button mat-menu-item  routerLink="/clients/ic-client/general"
+  [queryParams]="{ typeViewClient: 'view', clientType: 'ic' }">
+    {{ "Tài khoản" |
+    translate }}</button>
+  <button mat-menu-item  routerLink="/transaction/ic"
+  >
+    {{ "Giao dịch" }}
+  </button>
+
 
 </mat-menu>
 
