--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -22,7 +22,7 @@
 
       <ng-container matColumnDef="terminalNo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        ({{ 'Terminal_Component.tableTerminal.terminalNo'| translate}}
+        {{ 'Terminal_Component.tableTerminal.terminalNo'| translate}}
           <br />
           (TID)
         </th>
@@ -59,12 +59,13 @@
 
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-           Người tạo
+           Đang dùng
            </th>
         <td mat-cell *matCellDef="let terminal">
           <!-- {{ terminal.createdBy }}
           <br /> -->
-          <label style="text-align: center; color: red;">{{ terminal.owner ? 'Nội bộ' : terminal.ownerName  }}</label>
+          <label style="text-align: center; color: red;">
+            {{ terminal.owner ? 'Nội bộ' : terminal.ownerName  }}</label>
         </td>
       </ng-container>
 
@@ -81,12 +82,16 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Terminal_Component.labelAction'| translate}} </th>
         <td mat-cell *matCellDef="let terminal">
-          <button title="Điều chuyển máy POS" *midasHasPermission="'POS_UPDATE'" mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName)">
-            <fa-icon icon="sync"></fa-icon>
-          </button>
-          <button *midasHasPermission="'POS_CREATE'" title="Chỉnh sửa thông tin máy POS" mat-raised-button color="primary" [routerLink]="[terminal.terminalId,'edit']">
+          <label *midasHasPermission="'POS_UPDATE'">
+            <button title="Điều chuyển máy POS" *ngIf="terminal.isTransferAble"  mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName)">
+              <fa-icon icon="sync"></fa-icon>
+            </button>
+          </label>
+          <label *midasHasPermission="'POS_CREATE'" >
+          <button title="Chỉnh sửa thông tin máy POS" mat-raised-button color="primary" [routerLink]="[terminal.terminalId,'edit']">
             <fa-icon icon="edit"></fa-icon>
           </button>
+          </label>
         </td>
       </ng-container>
 
