--- a/src/app/clients/clients-view/ic-partner/ic-partner-tab.component.html
+++ b/src/app/clients/clients-view/ic-partner/ic-partner-tab.component.html
@@ -12,14 +12,14 @@
 
         <mat-checkbox labelPosition="after" (change)="changeShowClosedMerchants($event.checked)">Hiển thị đại lý đã đóng</mat-checkbox>
       </div> -->
-      <div class="action-button" fxLayoutGap="25px">
+      <!-- <div class="action-button" fxLayoutGap="25px">
         <button mat-raised-button title="Quay lại trang đối tác" color="primary" (click)="previousStep()">
           <fa-icon icon="backward"></fa-icon>
         </button>
         <button mat-raised-button color="primary" >
           <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Thêm đối tác
         </button>
-      </div>
+      </div> -->
     </div>
 
     <table mat-table [dataSource]="dataSource" matSort>
