fix show using pos
fix show using pos

--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -68,8 +68,8 @@
           <label style="text-align: center; color: red;">
             {{ terminal.owner ? 'Nội bộ' : terminal.ownerName  }}</label>
             <br />
-            <label style="text-align: center; color: green;">
-              ({{ terminal.usingName  }})</label>
+            <label *ngIf="terminal.usingName" style="text-align: center; color: green;">
+              ({{ terminal.usingName   }})</label>
         </td>
       </ng-container>
 
