--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -125,12 +125,12 @@
 
         <mat-form-field fxFlex="18%">
           <mat-label>Mã máy</mat-label>
-          <!-- <input matInput formControlName="terminalId" /> -->
-          <mat-select formControlName="terminalId">
+          <input matInput formControlName="terminalId" />
+          <!-- <mat-select formControlName="terminalId">
             <mat-option *ngFor="let terminal of terminals" [value]="terminal.terminalId">
               {{ terminal.terminalName }}
             </mat-option>
-          </mat-select>
+          </mat-select> -->
         </mat-form-field>
 
         <mat-form-field fxFlex="18%">
