--- a/src/app/transactions/manage-ic-transaction/manage-ic-transaction.component.html
+++ b/src/app/transactions/manage-ic-transaction/manage-ic-transaction.component.html
@@ -137,11 +137,21 @@
 
       <ng-container matColumnDef="terminalName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-
-          Máy Pos
+          Máy Pos / <br />
+          Đối tác
         </th>
         <td mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
-          <span class="red_text">{{ journalEntry.terminalId }}</span>
+          <span class="red_text">{{ journalEntry.terminalId }}</span> <br />
+          <span class="blue_text" >{{ displayPartnerPos(journalEntry.terminalId) }}</span>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bankName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Ngân hàng
+        </th>
+        <td mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
+          <span class="green_text" >{{ displayBankPos(journalEntry.terminalId) }}</span>
         </td>
       </ng-container>
 
@@ -204,7 +214,7 @@
       <ng-container matColumnDef="terminalAmount_feeAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Phí POs</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.feeAmount | number }}
+          {{ journalEntry.feeAmount | money }}
         </td>
       </ng-container>
 
