fix refesh page after transfer pos
fix refesh page after transfer pos

--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="row" fxLayoutAlign="start center">
       <div class="search-box">
         <mat-form-field class="filter">
-          <input matInput #filter (keyup)="applyFilter($event.target.value)" placeholder="{{ 'Terminal_Component.labelFilter'| translate}}">
+          <input matInput  #filter (keyup)="applyFilter($event.target.value)" placeholder="{{ 'Terminal_Component.labelFilter'| translate}}">
           <button mat-icon-button matSuffix aria-label="clear" *ngIf="filter.value" (click)="filter.value=''; applyFilter('');">
             <mat-icon>close</mat-icon>
           </button>
@@ -87,7 +87,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Terminal_Component.labelAction'| translate}} </th>
         <td mat-cell *matCellDef="let terminal">
           <label *midasHasPermission="'POS_UPDATE'">
-            <button title="Điều chuyển máy POS" *ngIf="terminal.isTransferAble"  mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName)">
+            <button title="Điều chuyển máy POS" *ngIf="terminal.isTransferAble"  mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName,  filter.value)">
               <fa-icon icon="sync"></fa-icon>
             </button>
           </label>
