--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -67,7 +67,7 @@
         matTooltip="Quản lý hóa đơn đầu vào">
         <i class="fas fa-receipt"></i>
       </button>
-      <!--
+
       <button mat-mini-fab color="basic" [routerLink]="['/banks']" matTooltip="Quản lý thông tin ngân hàng">
         <i class="fas fa-university"></i>
       </button>
@@ -75,7 +75,7 @@
       <button mat-mini-fab color="basic" [matMenuTriggerFor]="accountingMenu" #accountingMenuTrigger="matMenuTrigger"
         matTooltip="Quản trị hệ thống">
         <i class="fas fa-cogs"></i>
-      </button> -->
+      </button>
     </div>
   </div>
 
