--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -52,7 +52,7 @@
             ></mat-error>
           </mat-form-field>
 
-          <mat-form-field *ngIf="editTerminalForm.contains('merchantId') && isOwner " fxFlex="48%">
+          <mat-form-field *ngIf="editTerminalForm.contains('merchantId') && isOwner" fxFlex="48%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMerchantId" | translate }}</mat-label>
             <mat-select required formControlName="merchantId">
               <mat-option *ngFor="let type of merchants" [value]="type.name">
@@ -78,7 +78,7 @@
             ></mat-error>
           </mat-form-field>
 
-          <mat-form-field *ngIf="editTerminalForm.contains('bankCode') " fxFlex="48%">
+          <mat-form-field *ngIf="editTerminalForm.contains('bankCode')" fxFlex="48%">
             <mat-label>Ngân hàng</mat-label>
             <mat-select required [disabled]="!isOwner" formControlName="bankCode">
               <mat-option *ngFor="let bank of banks" [value]="bank.bankCode">
@@ -124,17 +124,22 @@
           >
             {{ "Terminal_Component.FormTerminal.checkboxIsActive" | translate }}
           </mat-checkbox>
-          <mat-card class="card-custom" fxFlex="100%" *ngIf="isOwner ">
+          <mat-card class="card-custom" fxFlex="100%" *ngIf="isOwner">
             <mat-card-header>
               <mat-card-title
                 ><span class="material-icons">perm_contact_calendar</span>&nbsp; Rule giao dịch:
               </mat-card-title>
             </mat-card-header>
             <mat-card-content fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-              <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid' )" fxFlex>
+              <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid')" fxFlex>
                 <mat-label>Số lần giao dịch cùng ngân hàng/ngày</mat-label>
-                <input matInput type="number" [readonly]="!isOwner" formControlName="timeChargeValid"
-                matTooltip="Đây là cài đặt số mà thẻ được phép cà vào máy POS này và các máy POS khác có cùng một ngân hàng phát hàng" />
+                <input
+                  matInput
+                  type="number"
+                  [readonly]="!isOwner"
+                  formControlName="timeChargeValid"
+                  matTooltip="Đây là cài đặt số mà thẻ được phép cà vào máy POS này và các máy POS khác có cùng một ngân hàng phát hàng"
+                />
                 <mat-error
                   *ngIf="editTerminalForm.controls.timeChargeValid.hasError('required')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' | translate"
@@ -150,8 +155,12 @@
               </mat-form-field>
               <mat-form-field *ngIf="editTerminalForm.contains('banksCheck')" fxFlex>
                 <mat-label>Không giao dịch thẻ thuộc ngân hàng</mat-label>
-                <mat-select [disabled]="!isOwner"  formControlName="banksCheck" multiple
-                matTooltip="Đây là ô chọn các ngân hàng mà thẻ của nó sẽ không được phép thực hiện giao dịch trên máy POS này">
+                <mat-select
+                  [disabled]="!isOwner"
+                  formControlName="banksCheck"
+                  multiple
+                  matTooltip="Đây là ô chọn các ngân hàng mà thẻ của nó sẽ không được phép thực hiện giao dịch trên máy POS này"
+                >
                   <mat-option *ngFor="let bank of banks" [value]="bank.bankCode">
                     {{ bank.bankName }}
                   </mat-option>
@@ -160,8 +169,12 @@
 
               <mat-form-field *ngIf="editTerminalForm.contains('cardsCheck')" fxFlex>
                 <mat-label>Không giao dịch thẻ thuộc loại</mat-label>
-                <mat-select [disabled]="!isOwner" multiple  formControlName="cardsCheck"
-                matTooltip="Đây là ô chọn các loại thẻ sẽ không được phép thực hiện giao dịch trên máy POS này">
+                <mat-select
+                  [disabled]="!isOwner"
+                  multiple
+                  formControlName="cardsCheck"
+                  matTooltip="Đây là ô chọn các loại thẻ sẽ không được phép thực hiện giao dịch trên máy POS này"
+                >
                   <mat-option *ngFor="let type of cardTypes" [value]="type.code">
                     {{ type.description }}
                   </mat-option>
@@ -174,10 +187,9 @@
         <h3 class="mat-h3" fxFlexFill>{{ "Terminal_Component.FormTerminal.labelGeneral" | translate }}</h3>
 
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-
-          <!-- <mat-form-field *ngIf="editTerminalForm.contains('costPercentage')" fxFlex="10%">
+          <mat-form-field *ngIf="editTerminalForm.contains('costPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCostPercentage" | translate }}</mat-label>
-            <input matInput required [readonly]="!isOwner" formControlName="costPercentage" type="number" matTooltip="Phí phải trả cho Đối tác máy"/>
+            <input matInput [readonly]="!isOwner" formControlName="costPercentage" type="number" matTooltip="Phí phải trả cho Đối tác máy"/>
             <mat-error
               *ngIf="editTerminalForm.controls.costPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -186,11 +198,17 @@
               *ngIf="editTerminalForm.controls.costPercentage.hasError('max')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMax' | translate"
             ></mat-error>
-          </mat-form-field> -->
+          </mat-form-field>
 
           <mat-form-field *ngIf="editTerminalForm.contains('cogsPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCogsPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="cogsPercentage" type="number" matTooltip="Phí áp dụng cho các chi nhánh"/>
+            <input
+              matInput
+              required
+              formControlName="cogsPercentage"
+              type="number"
+              matTooltip="Phí áp dụng cho các chi nhánh"
+            />
             <mat-error
               *ngIf="editTerminalForm.controls.cogsPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -202,7 +220,13 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('txnRateMin')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMinPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMin" type="number" matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng" />
+            <input
+              matInput
+              required
+              formControlName="txnRateMin"
+              type="number"
+              matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng"
+            />
             <mat-error
               *ngIf="editTerminalForm.controls.txnRateMin.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -214,7 +238,13 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('txnRateMax')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMaxPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMax" type="number" matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng"/>
+            <input
+              matInput
+              required
+              formControlName="txnRateMax"
+              type="number"
+              matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng"
+            />
             <mat-error
               *ngIf="editTerminalForm.controls.txnRateMax.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -226,7 +256,14 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('maxLimitAmount')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMaxLimitAmount" | translate }}</mat-label>
-            <input currencyMask [readonly]="!isOwner" matInput required formControlName="maxLimitAmount" matTooltip="Hạn mức giao dịch tối đa cho 1 lần cà"/>
+            <input
+              currencyMask
+              [readonly]="!isOwner"
+              matInput
+              required
+              formControlName="maxLimitAmount"
+              matTooltip="Hạn mức giao dịch tối đa cho 1 lần cà"
+            />
             <mat-error
               *ngIf="editTerminalForm.controls.maxLimitAmount.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin100000' | translate"
@@ -234,15 +271,25 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('levelLimit')" fxFlex="15%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelLevelLimit" | translate }}</mat-label>
-            <input matInput required [readonly]="!isOwner" formControlName="levelLimit" matTooltip="Số lần mà một thẻ tín dụng được phép cà lên máy POS này trong 1 ngày"/>
+            <input
+              matInput
+              required
+              [readonly]="!isOwner"
+              formControlName="levelLimit"
+              matTooltip="Số lần mà một thẻ tín dụng được phép cà lên máy POS này trong 1 ngày"
+            />
             <mat-error
               *ngIf="editTerminalForm.controls.levelLimit.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' | translate"
             ></mat-error>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPos()"
-          matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trái ngay lập tức sẽ được áp dụng cho tất cả các chi nhánh">
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="setDefaultFeeSettingPos()"
+            matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trái ngay lập tức sẽ được áp dụng cho tất cả các chi nhánh"
+          >
             <svg
               width="1em"
               height="1em"
@@ -271,8 +318,12 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPosForOffice()"
-          matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trên ngay lập tức sẽ được áp dụng cho chi nhánh được chọn ở ô bên trái.">
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="setDefaultFeeSettingPosForOffice()"
+            matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trên ngay lập tức sẽ được áp dụng cho chi nhánh được chọn ở ô bên trái."
+          >
             <svg
               width="1em"
               height="1em"
@@ -327,35 +378,28 @@
           </button>
         </mat-form-field>
         <div class="mat-elevation-z8">
-          <table
-            mat-table
-            [dataSource]="dataSource"
-            matSort
-            matSortActive="officeName"
-            matSortDirection="asc"
-            class="example-table"
-          >
+          <mat-table #table [dataSource]="dataSource" style="overflow: auto; max-height: 500px">
             <ng-container matColumnDef="officeName">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              <mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.Office" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element">
                 {{ element.officeName }}
-              </td>
+              </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="CardType">
-              <th mat-header-cell *matHeaderCellDef>
+              <mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.CardType" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.cardDescription }}</td>
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element">{{ element.cardDescription }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="FeeCost">
-              <th mat-header-cell *matHeaderCellDef matTooltip="Phí phải trả cho Đối tác máy">
+              <mat-header-cell *matHeaderCellDef matTooltip="Phí phải trả cho Đối tác máy">
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeCost" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
                     [readonly]="!isOwner"
@@ -367,14 +411,14 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
+              </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="FeeCOGS">
-              <th mat-header-cell *matHeaderCellDef matTooltip="Phí áp dụng cho các chi nhánh">
+              <mat-header-cell *matHeaderCellDef matTooltip="Phí áp dụng cho các chi nhánh">
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeCogs" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field>
                   <input
                     type="number"
@@ -385,16 +429,14 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
+              </mat-cell>
             </ng-container>
 
-
-
             <ng-container matColumnDef="FeeMin">
-              <th mat-header-cell *matHeaderCellDef matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng">
+              <mat-header-cell *matHeaderCellDef matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng">
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeMin" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
@@ -405,14 +447,14 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
+              </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="FeeMax" matTooltip="Phí cao nhất được phép áp dụng cho khách hàng">
-              <th mat-header-cell *matHeaderCellDef>
+              <mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeMax" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
@@ -423,16 +465,16 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
+              </mat-cell>
             </ng-container>
 
-            <!-- <ng-container matColumnDef="MaxLimitAmountTransaction">
-              <th mat-header-cell *matHeaderCellDef>
+            <ng-container matColumnDef="MaxLimitAmountTransaction">
+              <mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.MaxLimitAmountTransaction" | translate }} ({{
                   "labelCurrency" | translate
                 }})
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
@@ -444,14 +486,14 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
+              </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="LevelTransactionCard">
-              <th mat-header-cell *matHeaderCellDef>
+              <mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.LevelTransactionCard" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field floatLabel="never">
                   <input
                     matInput
@@ -464,15 +506,13 @@
                     [ngModelOptions]="{ standalone: true }"
                   />
                 </mat-form-field>
-              </td>
-            </ng-container> -->
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
+              </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+          </mat-table>
         </div>
-        <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
       </mat-card-content>
-      <!-- </div> -->
       <mat-card-content>
         <div style="text-align: center">
           <button mat-raised-button color="primary" (click)="submit()">
