add product id for cash wait
add product id for cash wait

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -69,6 +69,7 @@
                   (change)="this.calculateFeeTransaction()"
                 >
                   <option value="CA01">RTM thông thường</option>
+                  <option value="CA03">RTM - tiền chờ</option>
                   <option value="TEST">Test thẻ</option>
                   <option value="CA02">Lô lẻ</option>
                 </select>
