fix export transaction
export transaction
- ic
- local

--- a/src/app/transactions/manage-ic-transaction/manage-ic-transaction.component.html
+++ b/src/app/transactions/manage-ic-transaction/manage-ic-transaction.component.html
@@ -24,6 +24,9 @@
         >
           Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
         </button>
+        <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
+          Export Cho đối tác
+        </button>
         <h3 *ngIf="!fromDateAndToDate">
           Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
         </h3>
