--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -175,7 +175,10 @@
             Export
           </button>
 
-          <button style="margin: 5px; height: 40px" (click)="exportTransactionForPartner()" color="primary" mat-raised-button>
+          <!-- <button style="margin: 5px; height: 40px" (click)="exportTransactionForPartner()" color="primary" mat-raised-button>
+            Export Cho đối tác
+          </button> -->
+          <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
             Export Cho đối tác
           </button>
 
