fix export file
fix export file

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -179,7 +179,7 @@
             Export Cho đối tác
           </button> -->
           <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
-            Export Cho đối tác
+            Tải danh sách giao dịch
           </button>
 
         </div>
