--- a/src/app/transactions/manage-transaction/manage-transaction.component.scss
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.scss
@@ -5,6 +5,18 @@
   margin: 0 auto;
 }
 
+.mat-badge-content {
+  width: auto;
+  display: grid;
+  min-width: 32px;
+  min-height: 28px;
+  text-align: center;
+  align-items: center;
+  padding: 0px 0px;
+  top: -20px !important;
+  left: 40px !important;
+}
+
 .mat-menu-panel {
   min-width: 50px;
   max-width: 280px;
