add make fee advance cross branch

--- a/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
@@ -1,16 +1,29 @@
-<h1 mat-dialog-title>{{'Saving_Account_Component.clientAdvanceCash.titleClientAdvanceCash' |translate}}</h1>
+<h1 mat-dialog-title>{{ "Saving_Account_Component.clientAdvanceCash.titleClientAdvanceCash" | translate }}</h1>
 
-<div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'"
-     fxLayoutGap.lt-md="0%">
-
-     <mat-form-field fxFlex="96%" *ngIf="form.contains('entityAdvanceCash')">
-      <mat-label>Loại </mat-label>
-      <mat-select required formControlName="entityAdvanceCash">
-        <mat-option *ngFor="let type of typeEntityAdvanceCashes" [value]="type.id">
-          {{ type.value }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+<div
+  mat-dialog-content
+  [formGroup]="form"
+  [fxLayout]="'column'"
+  fxLayout.lt-md="column"
+  [fxLayoutGap]="'1%'"
+  fxLayoutGap.lt-md="0%"
+>
+  <mat-form-field fxFlex="96%" *ngIf="form.contains('entityAdvanceCash')">
+    <mat-label>Loại </mat-label>
+    <mat-select required formControlName="entityAdvanceCash">
+      <mat-option *ngFor="let type of typeEntityAdvanceCashes" [value]="type.id">
+        {{ type.value }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="select-book" *ngIf="form.contains('office')">
+    <mat-label>Chi nhánh</mat-label>
+    <mat-select required formControlName="office">
+      <mat-option *ngFor="let type of offices" [value]="type.officeId">
+        {{ type.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('staff')">
     <mat-label>Nhân viên</mat-label>
     <mat-select required formControlName="staff">
@@ -20,29 +33,40 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field *ngIf="!disable" class="select-book">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}</mat-label>
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelClientCash" | translate }}</mat-label>
     <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
       <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
     </div>
-    <input *ngIf="!isLoading" [required]="!disable" [readonly]="disable" type="text"
-           placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}" matInput
-           formControlName="clientAdvanceCash" [matAutocomplete]="auto">
+    <input
+      *ngIf="!isLoading"
+      [required]="!disable"
+      [readonly]="disable"
+      type="text"
+      placeholder="{{ 'Saving_Account_Component.clientAdvanceCash.labelClientCash' | translate }}"
+      matInput
+      formControlName="clientAdvanceCash"
+      [matAutocomplete]="auto"
+    />
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       <mat-option *ngFor="let cl of filteredClient" [value]="cl">
         {{ cl.displayName ? displayClientWithExternalId(cl) : cl.name }}
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
-  <mat-form-field *ngIf="disable" class="select-book" >
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}</mat-label>
-    <input [readonly]="disable" type="text"
-           placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}" matInput
-           formControlName="clientAdvanceCash">
+  <mat-form-field *ngIf="disable" class="select-book">
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelClientCash" | translate }}</mat-label>
+    <input
+      [readonly]="disable"
+      type="text"
+      placeholder="{{ 'Saving_Account_Component.clientAdvanceCash.labelClientCash' | translate }}"
+      matInput
+      formControlName="clientAdvanceCash"
+    />
   </mat-form-field>
 
   <mat-form-field fxFlex="96%" *ngIf="form.contains('typeAdvanceCash')">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelTypes' |translate}}</mat-label>
-    <mat-select  required formControlName="typeAdvanceCash">
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelTypes" | translate }}</mat-label>
+    <mat-select required formControlName="typeAdvanceCash">
       <mat-option *ngFor="let type of typeAdvanceCashes" [value]="type.id">
         {{ type.value }}
       </mat-option>
@@ -50,24 +74,24 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="96%">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelAmountAdvance' |translate}}</mat-label>
-    <input required
-           currencyMask
-           matInput formControlName="amountAdvance">
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelAmountAdvance" | translate }}</mat-label>
+    <input required currencyMask matInput formControlName="amountAdvance" />
   </mat-form-field>
-
 
   <mat-form-field *ngIf="form.contains('noteAdvance')" fxFlex="48%">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelNoteAdvance' |translate}}</mat-label>
-    <input type="text" aria-multiline="true" matInput formControlName="noteAdvance">
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelNoteAdvance" | translate }}</mat-label>
+    <input type="text" aria-multiline="true" matInput formControlName="noteAdvance" />
   </mat-form-field>
-
-
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close>{{ 'Shared_Component.FormDialog.btnCancel' | translate }}</button>
-  <button mat-raised-button color="primary"
-          [mat-dialog-close]="{ data: form  }"
-          [disabled]="!form.valid || form.pristine">{{ 'Shared_Component.FormDialog.btnAdd' |translate }}</button>
+  <button mat-raised-button mat-dialog-close>{{ "Shared_Component.FormDialog.btnCancel" | translate }}</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [mat-dialog-close]="{ data: form }"
+    [disabled]="!form.valid || form.pristine"
+  >
+    {{ "Shared_Component.FormDialog.btnAdd" | translate }}
+  </button>
 </mat-dialog-actions>
